# AntAgents

./: README.md  pyproject.toml  requirements.txt
deep_research/: run.py
deep_research/scripts/: text_inspector_tool.py  text_web_browser.py
docs/: REASONING_MODEL_COMPAT.md
recipes/: e2e_gpt5_tool_call.py  gradio_multiagent_demo.py  gradio_ui.py  helloworld.py  inspect_multiagent_run.py  plan_and_execute.py  plan_and_execute_gpt5.py  plan_customization.py  react_tool_use.py  run_model.py  test_responses_streaming.py
src/antagents/: __init__.py  _function_type_hints_utils.py  agent_types.py  agents.py  cli.py  default_tools.py  gradio_ui.py  local_python_executor.py  mcp_adapter.py  mcp_client.py  memory.py  models.py  monitoring.py  tool_validation.py  tools.py  utils.py
src/antagents/prompts/: toolcalling_agent.yaml  toolcalling_agent_responses.yaml
src/antagents/scripts/: mdconvert.py  reformulator.py  run_agents.py  text_inspector_tool.py  visual_qa.py
tutorials/: 01.大模型调用机制详解.md
